add reseration service

--- a/service/tests/Config.toml
+++ b/service/tests/Config.toml
@@ -1,5 +1,5 @@
 [user]
 id="123"
-name="waruna"
-email=""
-mobileNumber=""
+name="sahib"
+email="sahib.2125cse1145@kiet.edu"
+mobileNumber="+918393880077"
